--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="static/css/zTreeStyle.css" type="text/css">
     <title>校园帮客</title>
     <style>
       html{
@@ -16,6 +17,10 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="static/js/jquery-1.4.4.min.js"></script>
+    <script type="text/javascript" src="static/js/jquery.ztree.core.min.js"></script>
+    <script type="text/javascript" src="static/js/jquery.ztree.excheck.min.js"></script>
+    <script type="text/javascript" src="static/js/jquery.ztree.exedit.min.js"></script>
   </body>
 </html>
 
